fix mobile menu alignment

--- a/src/sass/components/atoms/nav-toggle-mobile.sass
+++ b/src/sass/components/atoms/nav-toggle-mobile.sass
@@ -2,3 +2,9 @@
   .hamburger
     span
       background-color: $color
+
+@media (max-width: 1199px)
+  .header-light
+    .header-light-content
+      .nav-toggle-mobile
+        margin: 0 0.8rem 0 0
